@@ -5,6 +5,8 @@ In Progress
 ---------
 - Armitage console is now a mouse hot spot. Right-click a host in the
   console to see its menu. Click a module to open the module's launcher
+- Armitage module launch console ignores false meterpreter prompt from
+  msfrpcd after a successful exploit job is run.
 
 21 Nov 13 (tested against msf git revision: 597eb56dcf)
 ---------
